static/book/reports/part1_nearfield.log
Traceback (most recent call last):
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/tbent/.miniconda3/envs/bie_book/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
import scipy.linalg
import matplotlib.pyplot as plt

%matplotlib inline
%config InlineBackend.figure_format='retina'

# the n-point trapezoidal rule on [-1, 1], returns tuple of (points, weights)
def trapezoidal_rule(n):
    return np.linspace(-1.0, 1.0, n + 1)[:-1], np.full(n, 2.0 / n)

# our simple curve functions will return (x, y, normal_x, normal_y, jacobian)
# because the input quadrature rule is on the domain [-1, 1], the 
# jacobian of the transformation for a circle with radius 1 is 
# constant and equal to pi.
def circle(quad_pts):
    theta = np.pi * (quad_pts + 1)
    x = np.cos(theta)
    y = np.sin(theta)«
    return x, y, x, y, np.pi
------------------

[0;36m  File [0;32m"<ipython-input-2-f17317752c41>"[0;36m, line [0;32m19[0m
[0;31m    y = np.sin(theta)«[0m
[0m                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid character '«' (U+00AB)

SyntaxError: invalid character '«' (U+00AB) (<ipython-input-2-f17317752c41>, line 19)

